New branch and updating ColorGradient Files and tinycolors pckg

--- a/fetools-app/package.json
+++ b/fetools-app/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
