--- a/fetools-app/package.json
+++ b/fetools-app/package.json
@@ -18,7 +18,9 @@
     "lucide-react": "^0.314.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
+    "react-select": "^5.8.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tinycolor2": "^1.6.0"
