--- a/fetools-app/package.json
+++ b/fetools-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jaames/iro": "^5.5.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
@@ -17,6 +18,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.314.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "tailwind-merge": "^2.2.1",
