--- a/fetools-app/package.json
+++ b/fetools-app/package.json
@@ -21,6 +21,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
+    "reactcss": "^1.2.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tinycolor2": "^1.6.0"
