--- a/fetools-app/package.json
+++ b/fetools-app/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.21.2",
     "react-select": "^5.8.0",
     "tailwind-merge": "^2.2.1",
